Update to 2.0.1 intellij platform plugin
update from
intellij-platform-plugin-template
https://github.com/JetBrains/intellij-platform-plugin-template